# learn-knn

./: .pre-commit-config.yaml  pyproject.toml  template.yaml
knn/: hello.py  knn.py  point.py
tests/: hello_test.py  knn_test.py
tests/resources/: sample.csv
